# learning_python

./: .gitignore
basic_python/: conditions.py  fn.py  loop.py
basic_python/data_types/: dictonary.py  list.py  number.py  string.py  tupple.py
lear_djano/: db.sqlite3  main.py  manage.py  pyproject.toml
lear_djano/core/: __init__.py  settings.py  urls.py
lear_djano/home/: models.py  urls.py  views.py
lear_djano/home/migrations/: 0001_initial.py  0002_rename_pub_data_question_pub_date.py
lear_djano/home/templates/: info.html  landing_page.html
mid_python/: classes.py  content.txt  decorators.py  exception.py  fibe.py  files.py  main.py
projects/api_handling/: main.py
projects/file_organizer/: file.py  main.py  os.py
projects/porject_init/: pyproject.toml
projects/virtual_env/: requirements.txt
projects/youtube_manager/: main.py  my_json.py  youtube_details.txt
