[project]
name = "porject-init"
version = "0.1.0"
description = "this is my first project setup in python"
authors = [
    {name = "masad@black",email = "asadbutt.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyjwt (>=2.10.1,<3.0.0)",
    "mongo-db (>=0.1,<0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
